# bitter

./: .gitignore  Dockerfile  Makefile  pyproject.toml  readme.md
config/: pin_aliases.json
docker/: Dockerfile  requirements.txt
etc/: gpio_config.json  pin_names.json
fermax_plus/: main.py
frozen/: typing.py
lib/: typing.py
skel/: boot.py  main.py  utils.py
skel/lib/: typing.py
src/: actions.py  api.py  boot.py  config.py  exceptions.py  gpio.py  main.py  pinplus.py  routes.py  secrets_stub.py  wifi.py
