[tool.poetry]
name = "fermax_plus"
version = "0.0.0"
description = ""
authors = ["DiegoPomares"]
packages = [
    {include = "**/*.py", from = "frozen"}
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
esptool = "^4.3"
rshell = "^0.0.31"
micropython-esp8266-stubs = "1.19.1.*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
