[tool.poetry]
name = "fermax_plus"
version = "0.0.0"
description = ""
authors = ["DiegoPomares"]
packages = [
    { include = "**/*.py", from = "frozen" }
]

[tool.poetry.dependencies]
python = "3.9.*"
esptool = { version = "^4.3", optional = true }
rshell = { version = "^0.0.31", optional = true }

[tool.poetry.dev-dependencies]
micropython-esp8266-stubs = "1.19.1.*"

[tool.poetry.extras]
serial = ["esptool", "rshell"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
